Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.4.3, 10.3.13
Description
Here is the upgrade scenario I have used:
- Start 3 nodes 10.3
- Upgrade them to 10.4
Used following settings:
log-bin
|
log-slave-updates
|
log-bin-compress
|
wsrep_gtid_domain_id=4294967295
|
wsrep_trx_fragment_size=1
|
wsrep_trx_fragment_unit='ROWS' |
wsrep_gtid_mode=ON |
Run sysbench:
sysbench oltp_read_write --mysql-user=root --mysql-socket=/tmp/mysql-node1.sock --tables=1 --table-size=10 prepare |
sysbench 1.0.16 (using bundled LuaJIT 2.1.0-beta2)
|
|
|
Creating table 'sbtest1'... |
Inserting 10 records into 'sbtest1' |
FATAL: mysql_drv_query() returned error 2013 (Lost connection to MySQL server during query) for query 'INSERT INTO sbtest1(k, c, pad) VALUES |
Node failed with:
mysqld: /home/shako/Galera_Tests/MariaDB/wsrep-lib/src/transaction.cpp:658: int wsrep::transaction::after_statement(): Assertion `client_state_.mode() == wsrep::client_state::m_local' failed. |
190218 20:01:09 [ERROR] mysqld got signal 6 ;
|
|
|
src/transaction.cpp:659(wsrep::transaction::after_statement())[0x5641329e3b3e] |
src/client_state.cpp:57(wsrep::client_state::close())[0x56413239aea9] |
sql/wsrep_trans_observer.h:344(wsrep_close(THD*))[0x56413239b193] |
sql/wsrep_storage_service.cc:76(Wsrep_storage_service::~Wsrep_storage_service())[0x56413239b1e2] |
sql/wsrep_storage_service.cc:77(Wsrep_storage_service::~Wsrep_storage_service())[0x56413239fd22] |
sql/wsrep_server_service.cc:75(Wsrep_server_service::release_storage_service(wsrep::storage_service*))[0x5641329f27d2] |
src/transaction.cpp:43((anonymous namespace)::storage_service_deleter::operator()(wsrep::storage_service*))[0x5641329f855d] |
src/transaction.cpp:75((anonymous namespace)::scoped_storage_service<(anonymous namespace)::storage_service_deleter>::~scoped_storage_service())[0x5641329f69c2] |
src/transaction.cpp:1209(wsrep::transaction::certify_fragment(wsrep::unique_lock<wsrep::mutex>&))[0x5641329f5fa7] |
src/transaction.cpp:1030(wsrep::transaction::streaming_step(wsrep::unique_lock<wsrep::mutex>&))[0x5641329f3278] |
src/transaction.cpp:239(wsrep::transaction::after_row())[0x5641321a9150] |
wsrep/client_state.hpp:305(wsrep::client_state::after_row())[0x56413219233e] |
sql/wsrep_trans_observer.h:123(wsrep_after_row(THD*, bool))[0x5641321a439f] |
sql/handler.cc:6476(wsrep_after_row(THD*))[0x5641321a476b] |
sql/handler.cc:6507(handler::ha_write_row(unsigned char*))[0x564131e16611] |
sql/sql_insert.cc:2026(write_record(THD*, TABLE*, st_copy_info*))[0x564131e139b3] |
sql/sql_insert.cc:1067(mysql_insert(THD*, TABLE_LIST*, List<Item>&, List<List<Item> >&, List<Item>&, List<Item>&, enum_duplicates, bool))[0x564131e5c425] |
sql/sql_parse.cc:4773(mysql_execute_command(THD*))[0x564131e6847c] |
sql/sql_parse.cc:8141(mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool))[0x564131e67af2] |
sql/sql_parse.cc:7964(wsrep_mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool))[0x564131e5372e] |
sql/sql_parse.cc:1804(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool))[0x564131e520d0] |
sql/sql_parse.cc:1357(do_command(THD*))[0x564131fc6155] |
Will upload simplified MTR test.